package ProtoBuf;  

message DAT_ElementProperty
{
	required int32 air = 1;
	required int32 water = 2;
	required int32 fire = 3;
	required int32 earth = 4;
}

